# clicker2

./: CMakeLists.txt  README.md  appRoot.cpp  appRoot.h  game.cpp  game.h  game.qml  images.qrc  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  movingPoint.cpp  movingPoint.h  settings.cpp  settings.h  settings.qml  timer.cpp  timer.h
